--- a/audit/values-loki.yaml
+++ b/audit/values-loki.yaml
@@ -1,25 +1,59 @@
-minio:
-  enabled: true
-
 chunksCache:
   allocatedMemory: 512
 
 loki:
   auth_enabled: false
-  useTestSchema: true
+  useTestSchema: false
+  commonConfig:
+    replication_factor: 1
+  schemaConfig:
+    configs:
+      - from: "2024-04-01"
+        store: tsdb
+        object_store: s3
+        schema: v13
+        index:
+          prefix: loki_index_
+          period: 24h
+  pattern_ingester:
+      enabled: true
+  limits_config:
+    allow_structured_metadata: true
+    volume_enabled: true
+  ruler:
+    enable_api: true
 
-gateway:
-  service:
-    type: LoadBalancer
+minio:
+  enabled: true
+      
+deploymentMode: SingleBinary
 
-write:
-  replicas: 2
-  affinity: {}
+singleBinary:
+  replicas: 1
 
-read:
-  replicas: 2
-  affinity: {}
-
+# Zero out replica counts of other deployment modes
 backend:
-  replicas: 2
-  affinity: {}
+  replicas: 0
+read:
+  replicas: 0
+write:
+  replicas: 0
+
+ingester:
+  replicas: 0
+querier:
+  replicas: 0
+queryFrontend:
+  replicas: 0
+queryScheduler:
+  replicas: 0
+distributor:
+  replicas: 0
+compactor:
+  replicas: 0
+indexGateway:
+  replicas: 0
+bloomCompactor:
+  replicas: 0
+bloomGateway:
+  replicas: 0
